# Main

./: .gitignore  LICENSE  README.md  RUNME.sh  test.txt
Projects/AlgWiz/: MiniLM.py
Projects/ContactAngle/: Control Panel.ipynb  NPhase0_Cleaner.py  NPhase1_FrameExtractor.py  Phase0_cleaner.py  Phase1_frame_extractor.py  Phase2_DimCheck.py  Phase2_YOLO_frameNormalizer.py  Phase2_YOLO_frameNormalizer_async.py  Phase3_dropExtractor.py  Phase3_processing.py  Phase4.1_emptyFolderRemover.py  Phase4_frame_extractor_parralel.py  Phase5.2_dropExtractor.py  Phase5_drop_detection.py  Phase6_CA.py  Phase6_Sajjad.py  Phase_YOLO_frameNormalizer.py  Phase_drop_detection_YOLO.py  Phase_frame_extractor_parralel.py  R&D_Phase2_YOLO_frameNormalizer.ipynb  R&D_extractor.ipynb  TODO  dep_Phase4_5_rest.py  dep_Phase5_Control Panel_Yassin.ipynb  dep_Phase5_batch_analysis.py  dep_Phase5_profiler.py  dep_Phase5_runme.sh  output.prof  test.py  test_Cv2gpu.py  test_cv2_cuda.ipynb
Projects/Docy/: MakeV2.py
Projects/MultiVideoPlayer/: main.py  test.py
Projects/RayTracing/: Build.sh  CMakeLists.txt  Embree.7z  Phase1_GenerateMesh.py  Phase2_trace_from_mesh.py  embree_trace.cpp  raytrace_embree_pcl.cpp  test.py
Projects/RayTracing/.BK/: P1_makingSTL.py  P2_STLRayTracing.py  ParallelLight.py  ParralleConformalMap.py  PointLight.py  test.py
Projects/RayTracing/GPTv2/: MainV1.cpp  MainV1.sh  main.cpp  main.sh  output.ppm  runme.sh  show_mesh
Projects/RayTracing/GPTv2/Poly/: Untitled.ply  hemisphere_mesh.ply  hemisphere_mesh_scaled.ply
Projects/RayTracing/Poly/: hemisphere_mesh_exponential.ply
Projects/RayTracing/RaytracingInWeekEnd/: ReadME.md  main.cpp  runme.sh
Projects/RayTracing/RaytracingInWeekEnd/Results/: hello_world.ppm
Projects/RayTracing/RaytracingInWeekEnd/utils/: color.h  ray.h  vec3.cpp  vec3.h
Projects/RayTracing/utils/: PLY.py  PLYModifier.py  __init__.py
Projects/Viscosity/: Mover.py
Web/: index.html
doc/: Make.py  MakeV2.py  Note.py  sample.md  template.html
doc/Devlog/: 21-07-25.md  28-07-25.md  30-07-25.md  OpenCV_UBUNTU.md  Ubuntu.md  cuDNN_UBUNTU.md
doc/WebLog/: Books.md  Gifts.md  ImprovingSkill.md  Life.md  LiteratureadnPhilosophyEffect.md  SoftwareFails.md  ToWatchList.md  UBUNTU.md  cuDNN.md
doc/maker/: CParser.py  PyParser.py  __init__.py
doc/notes/: notes_c++.md  notes_c.md  notes_python.md
doc/styles/: other.css  refs.css
docs/: index.html
docs/C++/: notes.html
src/PyThon/DynamicLoader/: DLoader.py  ReadMe.md  bash.sh  pyproject.toml
src/PyThon/DynamicLoader/load-remote-module/: pyproject.toml
src/PyThon/DynamicLoader/load-remote-module/load_remote_module/: __init__.py
src/PyThon/DynamicLoader/load-remote-module/load_remote_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/PyThon/DynamicLoader/load_remote_module.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+339 files in other folders)
