[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "load-remote-module"
version = "0.1"
description = "Dynamically download and import remote Python modules from GitHub."
readme = "ReadMe.md"
license = {text = "MIT"}
authors = [{name = "Yassin Riyazi", email = "yassinriyazi@gmail.com"}]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/yourusername/load-remote-module"
