[project]
name = "load-remote-module"
version = "0.3.0"
description = "Dynamically download and import remote Python modules from GitHub."
readme = "ReadMe.md"
license = {text = "MIT"}
authors = [{name = "Yassin Riyazi", email = "yassinriyazi@gmail.com"}]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/YassinRiyazi/Main/tree/main/src/PyThon/DynamicLoader"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = ["load_remote_module"]